# magic-wand-for-vertex-colors-maya

./: LICENSE.md  README.md  installer.mel  magic_wand_for_vertex_colors.py  pyproject.toml  select_similar_faces.py  vertex_color_magic_wand.py
