[build-system]
requires = ["setuptools", "setuptools-scm"]


[tool.setuptools]
py_modules = ["select_similar_faces"]


[project]
name = "select_similar_faces"
authors = [
    {name = "LDGerrits"},
]
description = "a color face selector plugin for maya"
readme = "README.md"
requires-python = ">=3.4"
keywords = ["maya", "plugin"]
classifiers = [
    "Programming Language :: Python :: 3.7",
]
dependencies = [
    'importlib-metadata; python_version<"3.7"',
]
version = "1.0.0"
