[build-system]
requires = ["setuptools", "setuptools-scm"]


[tool.setuptools]
py_modules = ["vertex_color_magic_wand"]


[project]
name = "vertex_color_magic_wand"
authors = [
    {name = "LDGerrits"},
]
description = "a magic wand for vertex colors plugin for maya"
readme = "README.md"
requires-python = ">=3.4"
keywords = ["maya", "plugin"]
classifiers = [
    "Programming Language :: Python :: 3.7",
]
dependencies = [
    'importlib-metadata; python_version<"3.7"',
]
version = "1.0.0"
